--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 [dependencies]
 image = "0.25.5"
-vulkano = "0.34.0"
-vulkano-shaders = "0.34.0"
+vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "master" }
+vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", branch = "master" }
+winit = "0.30.0"
 
 [profile.dev]
 opt-level = 3
