--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,25 @@ name = "vulkano-app"
 version = "0.1.0"
 edition = "2021"
 
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { version = "0.58", features = [
+    "Win32_Foundation",
+    "Win32_Graphics_Dwm",
+    "Win32_UI_WindowsAndMessaging",
+] }
+
 [dependencies]
-glam = "0.29.0"
-image = "0.25.5"
-vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "master" }
-vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", branch = "master" }
-winit = "0.30.0"
+glam = "0.29"
+egui-winit = { version = "0.29", default-features = false }
+egui_winit_vulkano = { git = "https://github.com/Letronix624/egui_winit_vulkano" }
+egui = "0.29"
+image = { version = "0.25", optional = true }
+winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
+vulkano = { version = "0.34", git = "https://github.com/vulkano-rs/vulkano.git" }
+vulkano-shaders = { version = "0.34", git = "https://github.com/vulkano-rs/vulkano.git" }
+vulkano-util = { version = "0.34", git = "https://github.com/vulkano-rs/vulkano.git" }
+egui_demo_lib = "0.29.1"
+raw-window-handle = "0.6"
 
 [profile.dev]
 opt-level = 3
