--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,14 @@ glam = "0.29"
 egui-winit = { version = "0.29", default-features = false }
 egui_winit_vulkano = { git = "https://github.com/Letronix624/egui_winit_vulkano" }
 egui = "0.29"
-image = { version = "0.25", optional = true }
+image = "0.25"
 winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
 vulkano = { version = "0.34", git = "https://github.com/vulkano-rs/vulkano.git" }
 vulkano-shaders = { version = "0.34", git = "https://github.com/vulkano-rs/vulkano.git" }
 vulkano-util = { version = "0.34", git = "https://github.com/vulkano-rs/vulkano.git" }
 egui_demo_lib = "0.29.1"
 raw-window-handle = "0.6"
+tobj = "4.0"
 
 [profile.dev]
 opt-level = 3
